// Descriptor file using standard Protocol Buffers features, in proto3 format.

// [START declaration]
syntax = "proto3";
package com.vmware.blockchain.protobuf.plugin.proto3;
// [END declaration]

// [START java_declaration]
option java_package = "com.vmware.blockchain.protobuf.plugin.proto3.java";
option java_multiple_files = true;
// [END java_declaration]

// [START messages]
message ScalarsMessage {
    bool bool_field = 1;
    string string_field = 2;
    float float_field = 3;
    double double_field = 4;
    int32 int32_field = 5;
    fixed32 fixed32_field = 6;
    sfixed32 sfixed32_field = 7;
    sint32 sint32_field = 8;
    uint32 uint32_field = 9;
    int64 int64_field = 10;
    fixed64 fixed64_field = 11;
    sfixed64 sfixed64_field = 12;
    sint64 sint64_field = 13;
    uint64 uint64_field = 14;
    bytes bytes_field = 15;
}

enum TopLevelEnum {
    ZERO = 0;
    ONE = 1;
    TEN = 10;
}

message EnumMessage {
    enum InnerEnum {
        NESTED_ZERO = 0;
        NESTED_ONE = 1;
        NESTED_TEN = 10;
    }

    TopLevelEnum top_level_enum = 1;
    InnerEnum nested_enum = 2;
    bool bool_field = 3;
}

message NestedMessage {
    message InnerMessage {
        string string_field = 1;
        int32 int_field = 2;
    }

    ScalarsMessage scalars = 1;
    InnerMessage inner = 10;
    InnerMessage another_inner = 20;
}

message RepeatFieldAndMapMessage {
    repeated int64 repeated_int64 = 1 [packed=false];
    repeated TopLevelEnum repeated_top_level_enum = 2 [packed=false];
    repeated EnumMessage.InnerEnum repeated_inner_enum = 3 [packed=false];
    repeated ScalarsMessage repeated_scalars = 4;
    map<string, ScalarsMessage> string_to_scalars_map = 5;
    map<int32, NestedMessage.InnerMessage> int32_to_inner_message_map = 6;
}

message OneOfMessage {
    oneof oneof_field {
        int64 int64_field = 1;
        string string_field = 2;
        TopLevelEnum top_level_enum = 3;
        EnumMessage.InnerEnum nested_enum = 4;
        ScalarsMessage scalars_message = 5;
        NestedMessage nested_message = 6;
    }
}
// [END messages]
