// Descriptor file declaring 'required' fields, in proto2 format.

// [START declaration]
syntax = "proto2";
package com.vmware.blockchain.protobuf.plugin.proto2;

import "basic_proto2.proto";
// [END declaration]

// [START java_declaration]
option java_package = "com.vmware.blockchain.protobuf.plugin.proto2.java";
option java_multiple_files = true;
// [END java_declaration]

// [START messages]
message RequiredScalarsMessage {
    required bool bool_field = 1;
    required string string_field = 2;
    required float float_field = 3;
    required double double_field = 4;
    required int32 int32_field = 5;
    required fixed32 fixed32_field = 6;
    required sfixed32 sfixed32_field = 7;
    required sint32 sint32_field = 8;
    required uint32 uint32_field = 9;
    required int64 int64_field = 10;
    required fixed64 fixed64_field = 11;
    required sfixed64 sfixed64_field = 12;
    required sint64 sint64_field = 13;
    required uint64 uint64_field = 14;
    required bytes bytes_field = 15;
}

message RequiredEnumMessage {
    required TopLevelEnum top_level_enum = 1;
    required EnumMessage.InnerEnum nested_enum = 2;
    required bool bool_field = 3;
}

message RequiredNestedMessage {
    message RequiredInnerMessage {
        required string string_field = 1;
        required int32 int_field = 2;
    }

    required RequiredScalarsMessage scalars = 1;
    required RequiredInnerMessage inner = 10;
    required RequiredInnerMessage another_inner = 20;
}
// [END messages]
